# TensorizedRatNets

./: README.md  dev_loewnerization.m  loewner_prune.m  lownerize_activations.py  model.py  models.py  pyproject.toml  rational.py  train.py  train_and_collect.py  train_graham.py
models/Lenet5/: train.py  train_old.py
notebooks/: Analysis.ipynb  L300100_baseline-100nodes.ipynb  L300100_baseline.ipynb  L300_baseline.ipynb  LL_all_targets.ipynb  LL_baseline.ipynb  LenetLinear_processing.ipynb  Untitled.ipynb  activations_pipeline.ipynb
src/: __init__.py  convert_ll1.py  ll1_tools.py  loewnerize_acts.py  unpack_ll1.py
src/tests/: test_ll1_tools.py
tools/: block_term_decomposition.py  npy2mat.py
